# pywave

./: .gitignore  MANIFEST.in  README.md  install_dev.sh  pyproject.toml  run_example.sh  setup.py
.github/workflows/: release.yml
csrc/Relaxation_Sig_to_Prony_portable/: CMakeLists.txt
csrc/Relaxation_Sig_to_Prony_portable/include/: Relaxation_Sig_to_Prony.h
csrc/Relaxation_Sig_to_Prony_portable/src/: Relaxation_Sig_to_Prony.cpp
csrc/ViscoWave_portable/: BUILD_LINUX.md  BUILD_MACOS.md  BUILD_WINDOWS.md  CMakeLists.txt
csrc/ViscoWave_portable/include/: ViscoWave.h
csrc/ViscoWave_portable/src/: Complex_1D_Array.cpp  Complex_1D_Array.h  Complex_2D_Array.cpp  Complex_2D_Array.h  GlobalStiffMatrix.cpp  GlobalStiffMatrix.h  ViscoWave.cpp  ViscoWaveEngine.cpp  ViscoWaveEngine.h
csrc/docs/: build_macos.sh  test_macos_build.py
docs/api/: legacy-api.md  modern-api.md
docs/development/: building-cpp.md  changelog.md
docs/getting-started/: installation.md  quickstart.md
examples/: README.md  modern_api_demo.py  quick_start.py  relaxation_basic.py  viscowave_basic.py  viscowave_si_units.py
sample/: JILS_Sample.THY
tests/: test_analysis_tools.py
viscowave/: README.md  __init__.py  _ctypes_utils.py  _dylib.py  _lowlevel.py  api.py  backcalc.py  builders.py  dynmod.py  exceptions.py  fwd_io.py  highlevel.py  indices.py  presets.py  types.py  units.py  validation.py
