[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viscowave"
version = "2.3.0"
description = "Python wrapper and analysis tools for ViscoWave pavement FWD analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.20"]
license = "AGPL-3.0-or-later"
authors = [
    {name = "H.S. Lee"}
]
maintainers = [
    {name = "primuszp"}
]
keywords = ["pavement", "viscoelastic", "FWD", "backcalculation", "deflection", "engineering"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
units = ["pint>=0.21"]
analysis = [
    "scipy>=1.7",
    "pandas>=1.3",
]
access = [
    "pyodbc>=5.0",
]
plot = [
    "matplotlib>=3.4",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "scipy>=1.7",
]
all = [
    "pint>=0.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "pyodbc>=5.0",
]

[tool.setuptools]
packages = ["viscowave"]
include-package-data = true

[tool.setuptools.package-data]
viscowave = ["*.dll", "*.so", "*.dylib", "README.md", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
